crates/ars-i18n/tests/ui/translate_missing_message.stderr
error: Translate variants must have at least one #[translate(...)] message
 --> tests/ui/translate_missing_message.rs:6:5
  |
6 |     Hello,
  |     ^^^^^
