crates/ars-i18n/tests/ui/translate_missing_message.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
enum BadText {
    Hello,
}

fn main() {}
